docs📝(优化补充说明):
Closes #5